# USDG

./: .gitignore  IMPLEMENTATION_SUMMARY.md  NEXT_STEPS.md  README.md  package.json  tsconfig.json  turbo.json
.github/workflows/: ci.yml
apps/api/: .env.example  package.json
apps/api/src/: index.ts
apps/web/: .env.example  next.config.js  package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/create/: page.tsx
apps/web/src/app/launches/: page.tsx
apps/web/src/app/launches/[id]/: page.tsx
apps/web/src/components/: header.tsx  launch-card.tsx  providers.tsx  verification-badge.tsx
apps/worker/: .env.example  package.json
apps/worker/src/: index.ts
docs/: DEVELOPMENT.md  LEGAL_DISCLAIMER.md  SPECIFICATION.md  THREAT_MODEL.md
infra/: .env.example  README.md  docker-compose.yml
programs/oneguard/: Anchor.toml  Cargo.toml  package.json  tsconfig.json
programs/oneguard/src/: errors.rs  events.rs  lib.rs  state.rs
programs/oneguard/src/instructions/: enable_trading.rs  finalize_launch.rs  initialize_launch.rs  initialize_lp.rs  mod.rs  purchase.rs  revoke_authorities.rs
programs/oneguard/tests/: oneguard.ts
