[package]
name = "oneguard"
version = "0.1.0"
description = "ONEGUARD - Security-first launchpad program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "oneguard"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
